# hipDF

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  build.sh  fetch_rapids.cmake  install_hipdf.sh  overrides.cmake  print_env.sh  versions.json
._upstream/: CONTRIBUTING.md
conda/environments/: all_rocm_arch-x86_64.yaml
cpp/: CMakeLists.txt
cpp/benchmarks/: CMakeLists.txt
cpp/benchmarks/common/: generate_input.cu  generate_input.hpp  random_distribution_factory.cuh
cpp/benchmarks/copying/: shift.cu
cpp/benchmarks/io/: cuio_common.cpp
cpp/benchmarks/iterator/: iterator.cu
cpp/benchmarks/join/: generate_input_tables.cuh  join_common.hpp
cpp/benchmarks/misc/: run_benchmarks.sh
cpp/benchmarks/stream_compaction/: apply_boolean_mask.cpp
cpp/benchmarks/string/: char_types.cpp  extract.cpp  factory.cu  json.cu
cpp/benchmarks/synchronization/: synchronization.hpp
cpp/benchmarks/text/: ngrams.cpp  tokenize.cpp
cpp/cmake/Modules/: ConfigureCUDA.cmake  ConfigureHIP.cmake  JitifyPreprocessKernels.cmake
cpp/doxygen/: Doxyfile
cpp/examples/basic/: CMakeLists.txt
cpp/examples/strings/: CMakeLists.txt  custom_optimized.cu  custom_prealloc.cu  custom_with_malloc.cu  libcudf_apis.cpp
cpp/include/cudf/: aggregation.hpp  cuda_runtime.h  cuda_runtime_api.h  groupby.hpp  interop.hpp  nvcomp.h  rolling.hpp  sorting.hpp  types.hpp
cpp/include/cudf_test/: base_fixture.hpp  column_utilities.hpp  column_wrapper.hpp  stream_checking_resource_adaptor.hpp  timestamp_utilities.cuh
cpp/include/nvtext/: generate_ngrams.hpp  ngrams_tokenize.hpp  subword_tokenize.hpp  tokenize.hpp
cpp/libcudf_kafka/: CMakeLists.txt
cpp/src/aggregation/: aggregation.cpp
cpp/src/binaryop/: binaryop.cpp
cpp/src/bitmask/: null_mask.cu
cpp/src/copying/: concatenate.cu  contiguous_split.cu  gather.cu
cpp/src/datetime/: datetime_ops.cu  timezone.cpp
cpp/src/dictionary/: add_keys.cu  decode.cu  encode.cu  remove_keys.cu  search.cu  set_keys.cu
cpp/src/groupby/: groupby.cu
cpp/src/hash/: concurrent_unordered_map.cuh  spark_murmurhash3_x86_32.cu  unordered_multiset.cuh
cpp/src/interop/: dlpack.cpp  from_arrow.cu  to_arrow.cu
cpp/src/io/: functions.cpp
cpp/src/jit/: cache.cpp  parser.cpp  parser.hpp
cpp/src/join/: conditional_join_kernels.cuh  hash_join.cu  join.cu  join_common_utils.cuh  join_common_utils.hpp  join_utils.cu  mixed_join.cu  mixed_join_common_utils.cuh  mixed_join_kernel.cuh  mixed_join_kernels_semi.cu  mixed_join_semi.cu  mixed_join_size_kernel.cuh  mixed_join_size_kernels_semi.cu
cpp/src/lists/: count_elements.cu  segmented_sort.cu
cpp/src/merge/: merge.cu
cpp/src/partitioning/: partitioning.cu
cpp/src/quantiles/: quantiles_util.hpp
cpp/src/reductions/: all.cu  any.cu  histogram.cu  minmax.cu  nth_element.cu  reductions.cpp
cpp/src/replace/: clamp.cu  nulls.cu  replace.cu
cpp/src/rolling/: grouped_rolling.cu  rolling.cu
cpp/src/round/: round.cu
cpp/src/scalar/: scalar.cpp
cpp/src/search/: contains_table.cu
cpp/src/sort/: is_sorted.cu  rank.cu  segmented_sort.cu  segmented_sort_impl.cuh  sort.cu  stable_segmented_sort.cu  stable_sort.cu
cpp/src/stream_compaction/: distinct.cu  distinct_count.cu  stream_compaction_common.cuh  stream_compaction_common.hpp
cpp/src/strings/: attributes.cu  capitalize.cu  case.cu  strings_column_factories.cu  utilities.cu
cpp/src/text/: edit_distance.cu  generate_ngrams.cu  jaccard.cu  minhash.cu  ngrams_tokenize.cu  normalize.cu  replace.cu  vocabulary_tokenize.cu
cpp/src/transform/: compute_column.cu  transform.cpp
cpp/src/unary/: cast_ops.cu  math_ops.cu
cpp/src/utilities/: jit_amd_utilities.cpp  traits.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/binaryop/: assert-binops.h  binop-compiled-test.cpp  binop-generic-ptx-test.cpp
cpp/tests/bitmask/: bitmask_tests.cpp  valid_if_tests.cu
cpp/tests/column/: bit_cast_test.cpp  column_test.cpp  factories_test.cpp
cpp/tests/copying/: concatenate_tests.cpp  gather_list_tests.cpp  get_value_tests.cpp  pack_tests.cpp  scatter_list_scalar_tests.cpp  segmented_gather_list_tests.cpp  split_tests.cpp
cpp/tests/datetime/: datetime_ops_test.cpp
cpp/tests/device_atomics/: device_atomics_test.cu
cpp/tests/error/: error_handling_test.cu
cpp/tests/groupby/: collect_list_tests.cpp  merge_lists_tests.cpp  merge_sets_tests.cpp
cpp/tests/hashing/: spark_murmurhash3_x86_32_test.cpp
cpp/tests/identify_stream_usage/: test_default_stream_identification.cu
cpp/tests/interop/: dlpack_test.cpp  from_arrow_test.cpp  to_arrow_test.cpp
cpp/tests/io/: csv_test.cpp  json_test.cpp  json_type_cast_test.cu  orc_test.cpp  parquet_chunked_reader_test.cpp  parquet_test.cpp  type_inference_test.cu
cpp/tests/iterator/: iterator_tests.cuh  optional_iterator_test.cuh  optional_iterator_test_numeric.cu  pair_iterator_test.cuh  pair_iterator_test_numeric.cu
cpp/tests/lists/: explode_tests.cpp  reverse_tests.cpp
cpp/tests/partitioning/: hash_partition_test.cpp
cpp/tests/reductions/: list_rank_test.cpp  reduction_tests.cpp
cpp/tests/reshape/: interleave_columns_tests.cpp
cpp/tests/rolling/: grouped_rolling_test.cpp  range_comparator_test.cu  range_rolling_window_test.cpp  rolling_test.cpp
cpp/tests/round/: round_tests.cpp
cpp/tests/scalar/: factories_test.cpp  scalar_device_view_test.cu
cpp/tests/search/: search_list_test.cpp
cpp/tests/sort/: is_sorted_tests.cpp  segmented_sort_tests.cpp  sort_nested_types_tests.cpp  sort_test.cpp
img/: hipdf_cypy_deps.dot
java/: pom.xml
java/ci/: Dockerfile.ubuntu
java/src/main/native/: CMakeLists.txt
java/src/main/native/include/: jni_utils.hpp
java/src/main/native/src/: CudaJni.cpp  CudfJni.cpp  NvcompJni.cpp  check_nvcomp_output_sizes.cu  row_conversion.cu
python/cudf/: CMakeLists.txt  pyproject.toml
python/cudf/udf_cpp/: CMakeLists.txt  shim.cu
python/cudf/udf_cpp/strings/include/cudf/strings/udf/: udf_string.hpp
python/cudf/udf_cpp/strings/src/strings/udf/: udf_apis.cu
python/cudf_kafka/: pyproject.toml  setup.py
python/custreamz/: pyproject.toml
python/dask_cudf/: pyproject.toml
(+330 files in other folders)
